# RAG

./: README.md  pyproject.toml
app/: embeddings.py  llm.py  vector_store.py
app/api/: routes.py
app/schemas/: api.py
